--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity">
+        <activity android:name=".gui.activity.Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
