--- a/server/rest/.htaccess
+++ b/server/rest/.htaccess
@@ -2,5 +2,5 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule api/v1/(.*)$ api/API.php?request=$1 [QSA,NC,L]
+RewriteRule api/v1/(.*)$ api/Api.php?request=$1 [QSA,NC,L]
 </IfModule>
