--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:name=".Application"
@@ -45,6 +46,11 @@
             android:exported="false"
             android:enabled="true"
             android:label="@string/prediction_service"
+            />
+
+        <service android:name=".service.ActionService"
+            android:exported="false"
+            android:enabled="true"
             />
 
         <receiver android:name=".service.PredictionService$AlarmScheduler"
